1 释放assetbundle资源 2 loader类增加释放共享assetbundle资源方法 3 加入tcpServer 方便组建局域网。

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Client/Assets/CObjDependencies.prefab
 Client/Assets/CObjDependencies.prefab.meta
 Client/UnityVS.Client.v11.suo
 Client/Assets/CustomerResource.meta
+Client/Assets/StreamingAssets
+
