--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ Client/Assets/CObjDependencies.prefab.meta
 Client/UnityVS.Client.v11.suo
 Client/Assets/CustomerResource.meta
 Client/Assets/StreamingAssets
-
+Client/Assets/Tmp
+Client/Assets/Tmp.meta
